# cellgrid

./: Cargo.toml  LICENSE  README.md
examples/: README.md  braille.rs  circle.rs  dungeon.rs  life.rs  ring.rs
src/: braille.rs  cluster.rs  coord.rs  grid.rs  lib.rs  line.rs  main.rs  neighborhood.rs  patterns.rs  rect.rs  vecgrid.rs
src/patterns/: circle.rs  cluster.rs  line.rs  mod.rs  neighborhood.rs  rect.rs
